--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,8 @@
 </head>
 <body>
     <!-- Facebook -->
-    <div id="fb-root"></div>
+    <!--<div id="fb-root"></div>-->
+    <!--
     <script>
         var fb_access = "{{fb_access}}";
         window.fbAsyncInit = function() {
@@ -75,7 +76,7 @@
                 xfbml      : true  // parse XFBML
             });
             
-            /*
+            
 
             FB.Event.subscribe('auth.authResponseChange', function(response) {
                 if(response.status === 'connected') {
@@ -85,7 +86,7 @@
                     FB.login();
                 }
             });
-            */
+            
             FB.getLoginStatus(function(response){
                 if(fb_access == "guest"){
                     $("#fb_div").append('<a class="btn btn-inverse" href="/marknote/auth">sign in facebook</a>');
@@ -125,6 +126,7 @@
             ref.parentNode.insertBefore(js, ref);
         }(document));
     </script>
+    -->
     <!-- Twitter -->
     <script>
         (function(d,s,id){
@@ -137,14 +139,17 @@
             }
         }(document,"script","twitter-wjs"));
     </script>
-
     <div class="page-header" id="pageheader">
-            <h1>Simple bookmark and keynote</h1>
-    </div>
-    <div id="fb_div">
-                    {% if name != "" %}
+            <div><h1>Simple bookmark and keynote</h1></div>
+            <div id="fb_div">
+                    {% if id != -1 %}
                         <h2>{{ name }}</h2>
+                        <h2>{{ id }}</h2>
+                        <a class="btn btn-inverse" href="/marknote/clear_session">log out</a>
+                    {% else %}
+                        <a class="btn btn-inverse" href="/marknote/auth">sign in facebook</a>
                     {% endif %}
+            </div>
     </div>
     <div class="container-fluid">
         <div class="row" id="main">
@@ -262,11 +267,7 @@
                 {% endfor %}
             </div>
             <div class="span4">
-                <div id="fb_div">
-                    {% if name != "" %}
-                        <h2>{{ name }}</h2>
-                    {% endif %}
-                </div>
+                
                 <br />
                 <div>
                     <form action="/marknote/search" method="GET">
